--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +167,10 @@
      "text": [
       "моделюємо випадання якогось числа, що буде вказувати на меч\n",
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: катана\n",
-      "Рідкість: Exotic\n",
-      "Дамаг: +3\n",
-      "Витривалість: +15\n"
+      "Назва: довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: +5\n",
+      "Витривалість: +10\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: довгий меч\n",
-      "Рідкість: Blue\n",
+      "Назва: рапіра\n",
+      "Рідкість: Epic\n",
       "Дамаг: +5\n",
-      "Витривалість: +10\n",
-      "Унікальна характеристика: Спритність\n"
+      "Витривалість: +20\n",
+      "Унікальна характеристика: Швидкі удари\n"
      ]
     }
    ],
@@ -268,17 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002A7BED168D0>\n",
-      "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002A7BEE39390>\n",
-      "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0}\n"
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000021B4728A8D0>\n",
+      "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000021B4720CF90>\n",
+      "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n"
      ]
     }
    ],
@@ -293,8 +293,8 @@
     "        \"\"\"Конструктор для створення обєкту Меч.\n",
     "        name: поля для імені;\n",
     "        rarity: Рідкість предмету; \n",
-    "        damag: ;\n",
-    "        vitality: ;\n",
+    "        damag: Нанесення шкоди;\n",
+    "        vitality: Міцність предмету;\n",
     "        bonus: необовязковий аргумент;\n",
     "        \"\"\"\n",
     "        self.name = name # це є атрибути обєкта, їх можна змінювати після створення обєкту\n",
@@ -305,6 +305,7 @@
     "\n",
     "        self.buff_damage = 0\n",
     "        self.buff_vitality = 0\n",
+    "        self.debuff = list()\n",
     "\n",
     "    @classmethod\n",
     "    def create_from_rarity(cls, name:str, rarity:str):\n",
@@ -345,6 +346,21 @@
     "            return \"Дія бафу на здоровя завершилась!\"\n",
     "        return \"На мечі не має ніякого бафу!\"\n",
     "    \n",
+    "    def aging(self):\n",
+    "        \"\"\"Даний метод реалізує процес старіння меча\"\"\"\n",
+    "        if Swords.negative_effects(\"ржавіння\"):\n",
+    "            self.debuff.append(\"ржавіння\")\n",
+    "        if Swords.negative_effects(\"затуплення\"):\n",
+    "            self.debuff.append(\"затуплення\")\n",
+    "        if Swords.negative_effects(\"трішина\"):\n",
+    "            self.debuff.append(\"трішина\")\n",
+    "        self.vitality -= len(self.debuff)\n",
+    "    \n",
+    "    def repair(self, r:int):\n",
+    "        \"\"\"Метод реалізує відновлення міцності предмету під час ремонту\"\"\"\n",
+    "        self.vitality += r * Swords.rarity_map[self.rarity]\n",
+    "        self.debuff = [] # Знімаємо всі дебафи\n",
+    "\n",
     "    def attack(self, item:Swords = None) -> str:\n",
     "        \"\"\"Метод для атаки\n",
     "        \"\"\"\n",
@@ -360,6 +376,15 @@
     "        self.vitality -= damage\n",
     "        return self.vitality\n",
     "    \n",
+    "    @staticmethod\n",
+    "    def negative_effects(name:str) -> int:\n",
+    "        \"\"\"Визначаємо чи меч випадковим чином отримав якийсь негативний ефект\"\"\"\n",
+    "        r = randint(0, 4)\n",
+    "        if r > 2:\n",
+    "            print(f\"Меч отримав негативнй ефект {name}, повертаємо дебаф на 1\")\n",
+    "            return 1\n",
+    "        return 0\n",
+    "    \n",
     "    @property \n",
     "    def get_name(self) -> str:\n",
     "        \"\"\"Повертає значення імені. І тут проперті змінювати не можна! Це моле лише для читання.\"\"\"\n",
@@ -368,12 +393,15 @@
     "    @property\n",
     "    def info(self) -> str:\n",
     "        \"\"\"Проперті для читання, виводить інформацію про обєкт.\"\"\"\n",
-    "        return f\"\"\"\\n<<<<<Стати:\n",
-    "        Назва: {self.get_name}\n",
-    "        Рідкість: {self.rarity}\n",
-    "        Дамаг: +{self.hit}\n",
-    "        Витривалість: +{self.health}\n",
-    "        Унікальна характеристика: {self.bonus}>>>>>\\n\"\"\"\n",
+    "        return f\"\"\"<<<<< Стати для {self.name} >>>>>\n",
+    "Назва: {self.get_name}\n",
+    "Рідкість: {self.rarity}\n",
+    "Дамаг: {self.hit}\n",
+    "Витривалість: {self.health}\n",
+    "Унікальна характеристика: {self.bonus}\n",
+    "Накладені Бафи: Дамаг {self.buff_damage} та Витривалість {self.buff_vitality}\n",
+    "Накладені Дебафи: {self.debuff}\n",
+    ">>>>>\\n\"\"\"\n",
     "\n",
     "    @property\n",
     "    def hit(self):\n",
@@ -406,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -442,51 +470,63 @@
      "text": [
       "Ми змогли переписати атрибут rarity та змінити його на Epic\n",
       "Ми можемо вивести проперті яка дає відомості про меч:\n",
+      "<<<<< Стати для Короткий меч >>>>>\n",
+      "Назва: Короткий меч\n",
+      "Рідкість: Epic\n",
+      "Дамаг: 4\n",
+      "Витривалість: 5\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 2 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
       "\n",
-      "<<<<<Стати:\n",
-      "        Назва: Короткий меч\n",
-      "        Рідкість: Epic\n",
-      "        Дамаг: +4\n",
-      "        Витривалість: +5\n",
-      "        Унікальна характеристика: None>>>>>\n",
-      "\n",
-      "\n",
-      "<<<<<Стати:\n",
-      "        Назва: Довгий меч\n",
-      "        Рідкість: Blue\n",
-      "        Дамаг: +5\n",
-      "        Витривалість: +6\n",
-      "        Унікальна характеристика: None>>>>>\n",
-      " Накладено баф на Довгий меч який додає атрибут здоровя +1, загальне здоровя: 7 \n",
-      "<<<<<Стати:\n",
-      "        Назва: Довгий меч\n",
-      "        Рідкість: Blue\n",
-      "        Дамаг: +5\n",
-      "        Витривалість: +7\n",
-      "        Унікальна характеристика: None>>>>>\n",
-      " Дія бафу на здоровя завершилась! \n",
-      "<<<<<Стати:\n",
-      "        Назва: Довгий меч\n",
-      "        Рідкість: Blue\n",
-      "        Дамаг: +5\n",
-      "        Витривалість: +6\n",
-      "        Унікальна характеристика: None>>>>>\n",
-      " Накладено баф на Довгий меч який додає атрибут нанесення шкоди +4 \n",
-      "<<<<<Стати:\n",
-      "        Назва: Довгий меч\n",
-      "        Рідкість: Blue\n",
-      "        Дамаг: +9\n",
-      "        Витривалість: +6\n",
-      "        Унікальна характеристика: None>>>>>\n",
+      "<<<<< Стати для Довгий меч >>>>>\n",
+      "Назва: Довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 5\n",
+      "Витривалість: 6\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
+      " Накладено баф на Довгий меч який додає атрибут здоровя +1, загальне здоровя: 7 <<<<< Стати для Довгий меч >>>>>\n",
+      "Назва: Довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 5\n",
+      "Витривалість: 7\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 1\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
+      " Дія бафу на здоровя завершилась! <<<<< Стати для Довгий меч >>>>>\n",
+      "Назва: Довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 5\n",
+      "Витривалість: 6\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
+      " Накладено баф на Довгий меч який додає атрибут нанесення шкоди +4 <<<<< Стати для Довгий меч >>>>>\n",
+      "Назва: Довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 9\n",
+      "Витривалість: 6\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 4 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
       "\n",
       "Нанесено шкоду 9 мечу Короткий меч\n",
-      "\n",
-      "<<<<<Стати:\n",
-      "        Назва: Короткий меч\n",
-      "        Рідкість: Epic\n",
-      "        Дамаг: +4\n",
-      "        Витривалість: +-4\n",
-      "        Унікальна характеристика: None>>>>>\n",
+      "<<<<< Стати для Короткий меч >>>>>\n",
+      "Назва: Короткий меч\n",
+      "Рідкість: Epic\n",
+      "Дамаг: 4\n",
+      "Витривалість: -4\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 2 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
       "\n"
      ]
     }
@@ -515,28 +555,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> \n",
-      "<<<<<Стати:\n",
-      "        Назва: Катана\n",
-      "        Рідкість: Blue\n",
-      "        Дамаг: +15\n",
-      "        Витривалість: +25\n",
-      "        Унікальна характеристика: None>>>>>\n",
+      "<class '__main__.Swords'> <<<<< Стати для Катана >>>>>\n",
+      "Назва: Катана\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 25\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
       "\n",
-      "<class '__main__.Swords'> \n",
-      "<<<<<Стати:\n",
-      "        Назва: Шпага\n",
-      "        Рідкість: Green\n",
-      "        Дамаг: +6\n",
-      "        Витривалість: +10\n",
-      "        Унікальна характеристика: None>>>>>\n",
+      "<class '__main__.Swords'> <<<<< Стати для Шпага >>>>>\n",
+      "Назва: Шпага\n",
+      "Рідкість: Basic\n",
+      "Дамаг: 3\n",
+      "Витривалість: 5\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
+      "\n",
+      "Наклали баф: <<<<< Стати для Катана >>>>>\n",
+      "Назва: Катана\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 27\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
+      "\n",
+      "Меч отримав негативнй ефект ржавіння, повертаємо дебаф на 1\n",
+      "Меч отримав негативнй ефект затуплення, повертаємо дебаф на 1\n",
+      "Меч отримав негативнй ефект трішина, повертаємо дебаф на 1\n",
+      "Меч почав старіти: <<<<< Стати для Катана >>>>>\n",
+      "Назва: Катана\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 24\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
+      "Накладені Дебафи: ['ржавіння', 'затуплення', 'трішина']\n",
+      ">>>>>\n",
+      "\n",
+      "Нас атакували Шпага з атакою 3: <<<<< Стати для Катана >>>>>\n",
+      "Назва: Катана\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 21\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
+      "Накладені Дебафи: ['ржавіння', 'затуплення', 'трішина']\n",
+      ">>>>>\n",
+      "\n",
+      "Закінсилась дія бафу: <<<<< Стати для Катана >>>>>\n",
+      "Назва: Катана\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 19\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: ['ржавіння', 'затуплення', 'трішина']\n",
+      ">>>>>\n",
+      "\n",
+      "Справляємо Меч: <<<<< Стати для Катана >>>>>\n",
+      "Назва: Катана\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 29\n",
+      "Унікальна характеристика: None\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
       "\n"
      ]
     }
@@ -545,8 +642,28 @@
     "c = Swords.create_from_rarity(\"Катана\", \"Blue\")\n",
     "print(type(c), c.info)\n",
     "d = Swords.create_random_rarity(\"Шпага\")\n",
-    "print(type(d), d.info)"
+    "print(type(d), d.info)\n",
+    "\n",
+    "# емулюємо як ми користуємось нашим мечем, накладаємо баф, меч старіє/зношується від \n",
+    "# використання та ми проводимо бої де його міцність зменшується\n",
+    "c.get_buff_vitality(2)\n",
+    "print(f\"Наклали баф: {c.info}\")\n",
+    "c.aging()\n",
+    "print(f\"Меч почав старіти: {c.info}\")\n",
+    "d.attack(c)\n",
+    "print(f\"Нас атакували {d.name} з атакою {d.damag}: {c.info}\")\n",
+    "c.expired_buff()\n",
+    "print(f\"Закінсилась дія бафу: {c.info}\")\n",
+    "c.repair(2)\n",
+    "print(f\"Справляємо Меч: {c.info}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
