doent work, cyrcular import

--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -167,9 +167,9 @@
      "text": [
       "моделюємо випадання якогось числа, що буде вказувати на меч\n",
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: довгий меч\n",
-      "Рідкість: Blue\n",
-      "Дамаг: +5\n",
+      "Назва: короткий меч\n",
+      "Рідкість: Green\n",
+      "Дамаг: +2\n",
       "Витривалість: +10\n"
      ]
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: рапіра\n",
-      "Рідкість: Epic\n",
-      "Дамаг: +5\n",
-      "Витривалість: +20\n",
-      "Унікальна характеристика: Швидкі удари\n"
+      "Назва: короткий меч\n",
+      "Рідкість: Green\n",
+      "Дамаг: +2\n",
+      "Витривалість: +10\n",
+      "Унікальна характеристика: Немає\n"
      ]
     }
    ],
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000021B4728A8D0>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x00000238F01D1890>\n",
       "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000021B4720CF90>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x00000238EFC8D690>\n",
       "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n"
      ]
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -592,44 +592,42 @@
       "Накладені Дебафи: []\n",
       ">>>>>\n",
       "\n",
-      "Меч отримав негативнй ефект ржавіння, повертаємо дебаф на 1\n",
-      "Меч отримав негативнй ефект затуплення, повертаємо дебаф на 1\n",
       "Меч отримав негативнй ефект трішина, повертаємо дебаф на 1\n",
       "Меч почав старіти: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 24\n",
+      "Витривалість: 26\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['ржавіння', 'затуплення', 'трішина']\n",
+      "Накладені Дебафи: ['трішина']\n",
       ">>>>>\n",
       "\n",
       "Нас атакували Шпага з атакою 3: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 21\n",
+      "Витривалість: 23\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['ржавіння', 'затуплення', 'трішина']\n",
+      "Накладені Дебафи: ['трішина']\n",
       ">>>>>\n",
       "\n",
       "Закінсилась дія бафу: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 19\n",
+      "Витривалість: 21\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
-      "Накладені Дебафи: ['ржавіння', 'затуплення', 'трішина']\n",
+      "Накладені Дебафи: ['трішина']\n",
       ">>>>>\n",
       "\n",
       "Справляємо Меч: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 29\n",
+      "Витривалість: 31\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -659,11 +657,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Реалізуємо споміжний клас бонусів для Меча\n",
+    "> нам потрібно створити клас, який реалізує ефекти бонусів, що впливають на дамаг або витривалість, або додають ще якісь ефекти;\n",
+    "\n",
+    "> інтегрувати даний клас у основний клас Меча;"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class SwordBonus:\n",
+    "    \"\"\"Описує функціонал бонусів\"\"\"\n",
+    "    @staticmethod\n",
+    "    def poison(item):\n",
+    "        if isinstance(item, Swords):\n",
+    "            item.damag += 1\n",
+    "            return f\"Застосовано бонус отрути {item.name}\"\n",
+    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(item)}\")\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def confusion(item):\n",
+    "        if isinstance(item, Swords):\n",
+    "            item.damag += 2\n",
+    "            return f\"Застосовано бонус спантеличеність {item.name}\"\n",
+    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(item)}\")\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def strength(item):\n",
+    "        if isinstance(item, Swords):\n",
+    "            item.vitality += 1\n",
+    "            return f\"Застосовано бонус сили до {item.name}\"\n",
+    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(item)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['confusion', 'poison', 'strength']\n",
+      "Застосовано бонус спантеличеність Катана\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Blue', 'Epic', 'Legend']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\")]\n",
+    "\n",
+    "print(methods_list)\n",
+    "\n",
+    "pp = getattr(SwordBonus, choice(methods_list))\n",
+    "\n",
+    "print(pp(c))\n",
+    "\n",
+    "rarity_map = {\"Basic\": 1, \"Green\": 2, \"Blue\": 5, \"Epic\": 8, \"Legend\": 10}\n",
+    "list(rarity_map.keys())[-3:]\n"
+   ]
   }
  ],
  "metadata": {
