--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -167,9 +167,9 @@
      "text": [
       "моделюємо випадання якогось числа, що буде вказувати на меч\n",
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: короткий меч\n",
-      "Рідкість: Green\n",
-      "Дамаг: +2\n",
+      "Назва: довгий меч\n",
+      "Рідкість: Blue\n",
+      "Дамаг: +5\n",
       "Витривалість: +10\n"
      ]
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: короткий меч\n",
-      "Рідкість: Green\n",
-      "Дамаг: +2\n",
-      "Витривалість: +10\n",
-      "Унікальна характеристика: Немає\n"
+      "Назва: рапіра\n",
+      "Рідкість: Epic\n",
+      "Дамаг: +5\n",
+      "Витривалість: +20\n",
+      "Унікальна характеристика: Швидкі удари\n"
      ]
     }
    ],
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x00000238F01D1890>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000027022FCE890>\n",
       "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x00000238EFC8D690>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x00000270230C9210>\n",
       "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n"
      ]
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -574,9 +574,9 @@
       "\n",
       "<class '__main__.Swords'> <<<<< Стати для Шпага >>>>>\n",
       "Назва: Шпага\n",
-      "Рідкість: Basic\n",
-      "Дамаг: 3\n",
-      "Витривалість: 5\n",
+      "Рідкість: Blue\n",
+      "Дамаг: 15\n",
+      "Витривалість: 25\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -592,7 +592,7 @@
       "Накладені Дебафи: []\n",
       ">>>>>\n",
       "\n",
-      "Меч отримав негативнй ефект трішина, повертаємо дебаф на 1\n",
+      "Меч отримав негативнй ефект затуплення, повертаємо дебаф на 1\n",
       "Меч почав старіти: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
@@ -600,34 +600,34 @@
       "Витривалість: 26\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['трішина']\n",
+      "Накладені Дебафи: ['затуплення']\n",
       ">>>>>\n",
       "\n",
-      "Нас атакували Шпага з атакою 3: <<<<< Стати для Катана >>>>>\n",
+      "Нас атакували Шпага з атакою 15: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 23\n",
+      "Витривалість: 11\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['трішина']\n",
+      "Накладені Дебафи: ['затуплення']\n",
       ">>>>>\n",
       "\n",
       "Закінсилась дія бафу: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 21\n",
+      "Витривалість: 9\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
-      "Накладені Дебафи: ['трішина']\n",
+      "Накладені Дебафи: ['затуплення']\n",
       ">>>>>\n",
       "\n",
       "Справляємо Меч: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 31\n",
+      "Витривалість: 19\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -668,37 +668,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Any\n",
+    "\n",
     "class SwordBonus:\n",
     "    \"\"\"Описує функціонал бонусів\"\"\"\n",
+    "    count = 0\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        SwordBonus.count += 1\n",
+    "\n",
     "    @staticmethod\n",
-    "    def poison(item):\n",
-    "        if isinstance(item, Swords):\n",
+    "    def poison(item) -> str:\n",
+    "        if SwordBonus.__check_obj(item):\n",
     "            item.damag += 1\n",
     "            return f\"Застосовано бонус отрути {item.name}\"\n",
-    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(item)}\")\n",
     "    \n",
     "    @staticmethod\n",
-    "    def confusion(item):\n",
-    "        if isinstance(item, Swords):\n",
+    "    def confusion(item) -> str:\n",
+    "        if SwordBonus.__check_obj(item):\n",
     "            item.damag += 2\n",
     "            return f\"Застосовано бонус спантеличеність {item.name}\"\n",
-    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(item)}\")\n",
     "    \n",
     "    @staticmethod\n",
-    "    def strength(item):\n",
-    "        if isinstance(item, Swords):\n",
+    "    def strength(item) -> str:\n",
+    "        if SwordBonus.__check_obj(item):\n",
     "            item.vitality += 1\n",
     "            return f\"Застосовано бонус сили до {item.name}\"\n",
-    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(item)}\")"
+    "    \n",
+    "    @staticmethod\n",
+    "    def __check_obj(obj: Any) -> bool:\n",
+    "        \"\"\"Реалізували приватний метод який перевіряє чи ми працюємо з правильним обєктом\"\"\"\n",
+    "        if isinstance(obj, Swords):\n",
+    "            return True\n",
+    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(obj)}\")\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        \"\"\"Представлення об'єкта у вигляді рядка, Це буде викликатись коли застосовуємо функцію прінт\"\"\"\n",
+    "        return f\"Клас SwordBonus: реалізує функціонал бонусів, поточний обєкт має хеш {self.__hash__()}\"\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        \"\"\"Канонічне представлення об'єкту\"\"\"\n",
+    "        return f\"SwordBonus()\"\n",
+    "    \n",
+    "    def __len__(self) -> int:\n",
+    "        \"\"\"Застосування методу довжини поверне кількість бонусів які реалізовані в даному класі\"\"\"\n",
+    "        methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n",
+    "        return len(methods_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -706,31 +730,125 @@
      "output_type": "stream",
      "text": [
       "['confusion', 'poison', 'strength']\n",
-      "Застосовано бонус спантеличеність Катана\n"
+      "Застосовано бонус отрути Катана\n",
+      "['Blue', 'Epic', 'Legend']\n",
+      "Клас SwordBonus: реалізує функціонал бонусів, поточний обєкт має хеш 167540422057\n",
+      "SwordBonus()\n",
+      "Кількість доступних бонусів 3\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['Blue', 'Epic', 'Legend']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\")]\n",
+    "methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n",
     "\n",
     "print(methods_list)\n",
     "\n",
     "pp = getattr(SwordBonus, choice(methods_list))\n",
     "\n",
+    "b = SwordBonus()\n",
     "print(pp(c))\n",
     "\n",
     "rarity_map = {\"Basic\": 1, \"Green\": 2, \"Blue\": 5, \"Epic\": 8, \"Legend\": 10}\n",
-    "list(rarity_map.keys())[-3:]\n"
+    "print(list(rarity_map.keys())[-3:])\n",
+    "\n",
+    "b = SwordBonus()\n",
+    "print(b)\n",
+    "print(repr(b))\n",
+    "\n",
+    "print(f\"Кількість доступних бонусів {len(b)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Спеціальі методи в класах dunder methods та приватні методи\n",
+    "> `_method` - це є приватний метод, і його бажано використовувати лише в межах класу, тобто всередині інших методів і не бажано викликати влас не обєкту або ж наслідувати в інших класах;\n",
+    "\n",
+    "> `__method` - цей метод є реально приватним і його можна використовувати виключно в межах класу;\n",
+    "\n",
+    "> `__method__` - double underscore або Магічні методи - ці методи з подвійним підкресленням з обох боків є внутрішніми, зазвичай вбудованими методами які реалізуються роботу класу;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Допомого ChatGPT\n",
+    "> попросили покращити нам клас бонусу і ось що отримали:\n",
+    "\n",
+    "Ось аналіз коду класу `SwordBonus` та рекомендації щодо його покращення:\n",
+    "\n",
+    "1. **Змінні класу**: Змінна `count` визначена як змінна класу, але не використовується. Якщо вона не потрібна, її можна видалити.\n",
+    "\n",
+    "2. **Методи**: Методи `poison`, `confusion` та `strength` повинні бути статичними, оскільки вони не використовують жодних атрибутів об'єкта.\n",
+    "\n",
+    "3. **Підвищення доступності**: Розгляньте можливість зробити методи `poison`, `confusion` та `strength` публічними, якщо їх можуть викликати інші класи.\n",
+    "\n",
+    "4. **Повернення значень**: У методах `poison`, `confusion` та `strength` немає виразів return, які будуть виконані, якщо не виконається жодна з умов. Розгляньте можливість додати повернення за замовчуванням або підвищення винятку, якщо стан об'єкта неправильний.\n",
+    "\n",
+    "5. **Використання магічних методів**: Методи `__str__`, `__repr__` та `__len__` використовуються для представлення об'єкта у вигляді рядка, канонічного представлення та отримання довжини відповідно. Вони правильно використовуються, але можна додати більше інформації для кращого розуміння об'єкта.\n",
+    "\n",
+    "Ось оновлений код класу з урахуванням рекомендацій:\n",
+    "\n",
+    "```python\n",
+    "from typing import Any\n",
+    "\n",
+    "class SwordBonus:\n",
+    "    \"\"\"Описує функціонал бонусів\"\"\"\n",
+    "    \n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def poison(item) -> str:\n",
+    "        \"\"\"Застосовує бонус отрути\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.damag += 1\n",
+    "            return f\"Застосовано бонус отрути до {item.name}\"\n",
+    "        else:\n",
+    "            return \"Помилка: неможливо застосувати бонус\"\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def confusion(item) -> str:\n",
+    "        \"\"\"Застосовує бонус спантеличеність\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.damag += 2\n",
+    "            return f\"Застосовано бонус спантеличеність до {item.name}\"\n",
+    "        else:\n",
+    "            return \"Помилка: неможливо застосувати бонус\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def strength(item) -> str:\n",
+    "        \"\"\"Застосовує бонус сили\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.vitality += 1\n",
+    "            return f\"Застосовано бонус сили до {item.name}\"\n",
+    "        else:\n",
+    "            return \"Помилка: неможливо застосувати бонус\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def __check_obj(obj: Any) -> bool:\n",
+    "        \"\"\"Перевіряє, чи ми працюємо з правильним об'єктом\"\"\"\n",
+    "        if isinstance(obj, Swords):\n",
+    "            return True\n",
+    "        raise ValueError(f\"Неможливо застосувати бонус до класу {type(obj)}\")\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        \"\"\"Представлення об'єкта у вигляді рядка\"\"\"\n",
+    "        return \"Клас SwordBonus: функціонал бонусів\"\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        \"\"\"Канонічне представлення об'єкту\"\"\"\n",
+    "        return f\"SwordBonus()\"\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        \"\"\"Повертає кількість бонусів, які реалізовані в класі\"\"\"\n",
+    "        methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n",
+    "        return len(methods_list)\n",
+    "```\n",
+    "\n",
+    "Цей оновлений код покращує зрозуміння та коректність роботи класу `SwordBonus`."
    ]
   }
  ],
