--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -203,11 +203,11 @@
      "output_type": "stream",
      "text": [
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: рапіра\n",
-      "Рідкість: Epic\n",
-      "Дамаг: +5\n",
-      "Витривалість: +20\n",
-      "Унікальна характеристика: Швидкі удари\n"
+      "Назва: катана\n",
+      "Рідкість: Exotic\n",
+      "Дамаг: +3\n",
+      "Витривалість: +15\n",
+      "Унікальна характеристика: Берсерк\n"
      ]
     }
    ],
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000027022FCE890>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002688BE1DD90>\n",
       "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x00000270230C9210>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002688BE1CD10>\n",
       "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n"
      ]
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -574,9 +574,9 @@
       "\n",
       "<class '__main__.Swords'> <<<<< Стати для Шпага >>>>>\n",
       "Назва: Шпага\n",
-      "Рідкість: Blue\n",
-      "Дамаг: 15\n",
-      "Витривалість: 25\n",
+      "Рідкість: Legend\n",
+      "Дамаг: 30\n",
+      "Витривалість: 50\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -592,42 +592,43 @@
       "Накладені Дебафи: []\n",
       ">>>>>\n",
       "\n",
+      "Меч отримав негативнй ефект ржавіння, повертаємо дебаф на 1\n",
       "Меч отримав негативнй ефект затуплення, повертаємо дебаф на 1\n",
       "Меч почав старіти: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 26\n",
+      "Витривалість: 25\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['затуплення']\n",
+      "Накладені Дебафи: ['ржавіння', 'затуплення']\n",
       ">>>>>\n",
       "\n",
-      "Нас атакували Шпага з атакою 15: <<<<< Стати для Катана >>>>>\n",
+      "Нас атакували Шпага з атакою 30: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 11\n",
+      "Витривалість: -5\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['затуплення']\n",
+      "Накладені Дебафи: ['ржавіння', 'затуплення']\n",
       ">>>>>\n",
       "\n",
       "Закінсилась дія бафу: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 9\n",
+      "Витривалість: -7\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
-      "Накладені Дебафи: ['затуплення']\n",
+      "Накладені Дебафи: ['ржавіння', 'затуплення']\n",
       ">>>>>\n",
       "\n",
       "Справляємо Меч: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 19\n",
+      "Витривалість: 3\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -668,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,46 +717,61 @@
     "    \n",
     "    def __len__(self) -> int:\n",
     "        \"\"\"Застосування методу довжини поверне кількість бонусів які реалізовані в даному класі\"\"\"\n",
-    "        methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n",
-    "        return len(methods_list)"
+    "        return len(SwordBonus.bonus_list())\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def bonus_list() -> list:\n",
+    "        return [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['confusion', 'poison', 'strength']\n",
-      "Застосовано бонус отрути Катана\n",
-      "['Blue', 'Epic', 'Legend']\n",
-      "Клас SwordBonus: реалізує функціонал бонусів, поточний обєкт має хеш 167540422057\n",
-      "SwordBonus()\n",
-      "Кількість доступних бонусів 3\n"
+      "<function SwordBonus.confusion at 0x000002688BE05080>\n",
+      "<<<<< Стати для Короткий меч >>>>>\n",
+      "Назва: Короткий меч\n",
+      "Рідкість: Green\n",
+      "Дамаг: 2\n",
+      "Витривалість: 10\n",
+      "Унікальна характеристика: <function SwordBonus.confusion at 0x000002688BE05080>\n",
+      "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
+      "Накладені Дебафи: []\n",
+      ">>>>>\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n",
-    "\n",
-    "print(methods_list)\n",
-    "\n",
-    "pp = getattr(SwordBonus, choice(methods_list))\n",
-    "\n",
-    "b = SwordBonus()\n",
-    "print(pp(c))\n",
-    "\n",
-    "rarity_map = {\"Basic\": 1, \"Green\": 2, \"Blue\": 5, \"Epic\": 8, \"Legend\": 10}\n",
-    "print(list(rarity_map.keys())[-3:])\n",
+    "#methods_list = [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and not method.startswith(\"__\") and not method.startswith(\"_\")]\n",
+    "#\n",
+    "#print(methods_list)\n",
+    "#\n",
+    "#pp = getattr(SwordBonus, choice(methods_list))\n",
     "\n",
     "b = SwordBonus()\n",
-    "print(b)\n",
-    "print(repr(b))\n",
+    "#print(pp(c))\n",
+    "#\n",
+    "#rarity_map = {\"Basic\": 1, \"Green\": 2, \"Blue\": 5, \"Epic\": 8, \"Legend\": 10}\n",
+    "#print(list(rarity_map.keys())[-3:])\n",
+    "#\n",
+    "#b = SwordBonus()\n",
+    "#print(b)\n",
+    "#print(repr(b))\n",
+    "#\n",
+    "#print(f\"Кількість доступних бонусів {len(b)}\")\n",
     "\n",
-    "print(f\"Кількість доступних бонусів {len(b)}\")\n"
+    "\n",
+    "bonus = getattr(SwordBonus, choice(b.bonus_list()))\n",
+    "print(bonus)\n",
+    "\n",
+    "s = Swords(\"Короткий меч\", \"Green\", 2, 10, bonus=bonus)\n",
+    "print(s.info)\n"
    ]
   },
   {
@@ -850,6 +866,13 @@
     "\n",
     "Цей оновлений код покращує зрозуміння та коректність роботи класу `SwordBonus`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
