--- a/2_lab/nb.ipynb
+++ b/2_lab/nb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,10 +167,10 @@
      "text": [
       "моделюємо випадання якогось числа, що буде вказувати на меч\n",
       "Вітаємо, Вам випав меч! Стати:\n",
-      "Назва: довгий меч\n",
-      "Рідкість: Blue\n",
-      "Дамаг: +5\n",
-      "Витривалість: +10\n"
+      "Назва: катана\n",
+      "Рідкість: Exotic\n",
+      "Дамаг: +3\n",
+      "Витривалість: +15\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002688BE1DD90>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000020EB1795690>\n",
       "В якого є атрибути {'name': 'Короткий меч', 'rarity': 'Green', 'damag': 2, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n",
-      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x000002688BE1CD10>\n",
+      "<class '__main__.Swords'> Створено обєкт <__main__.Swords object at 0x0000020EB1788950>\n",
       "В якого є атрибути {'name': 'Довгий меч', 'rarity': 'Blue', 'damag': 5, 'vitality': 10, 'bonus': None, 'buff_damage': 0, 'buff_vitality': 0, 'debuff': []}\n"
      ]
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,9 +574,9 @@
       "\n",
       "<class '__main__.Swords'> <<<<< Стати для Шпага >>>>>\n",
       "Назва: Шпага\n",
-      "Рідкість: Legend\n",
-      "Дамаг: 30\n",
-      "Витривалість: 50\n",
+      "Рідкість: Basic\n",
+      "Дамаг: 3\n",
+      "Витривалість: 5\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -592,43 +592,42 @@
       "Накладені Дебафи: []\n",
       ">>>>>\n",
       "\n",
-      "Меч отримав негативнй ефект ржавіння, повертаємо дебаф на 1\n",
       "Меч отримав негативнй ефект затуплення, повертаємо дебаф на 1\n",
       "Меч почав старіти: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 25\n",
+      "Витривалість: 26\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['ржавіння', 'затуплення']\n",
+      "Накладені Дебафи: ['затуплення']\n",
       ">>>>>\n",
       "\n",
-      "Нас атакували Шпага з атакою 30: <<<<< Стати для Катана >>>>>\n",
+      "Нас атакували Шпага з атакою 3: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: -5\n",
+      "Витривалість: 23\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 2\n",
-      "Накладені Дебафи: ['ржавіння', 'затуплення']\n",
+      "Накладені Дебафи: ['затуплення']\n",
       ">>>>>\n",
       "\n",
       "Закінсилась дія бафу: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: -7\n",
+      "Витривалість: 21\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
-      "Накладені Дебафи: ['ржавіння', 'затуплення']\n",
+      "Накладені Дебафи: ['затуплення']\n",
       ">>>>>\n",
       "\n",
       "Справляємо Меч: <<<<< Стати для Катана >>>>>\n",
       "Назва: Катана\n",
       "Рідкість: Blue\n",
       "Дамаг: 15\n",
-      "Витривалість: 3\n",
+      "Витривалість: 31\n",
       "Унікальна характеристика: None\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
@@ -669,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,20 +725,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function SwordBonus.confusion at 0x000002688BE05080>\n",
+      "<function SwordBonus.confusion at 0x0000020EB179F060>\n",
       "<<<<< Стати для Короткий меч >>>>>\n",
       "Назва: Короткий меч\n",
       "Рідкість: Green\n",
       "Дамаг: 2\n",
       "Витривалість: 10\n",
-      "Унікальна характеристика: <function SwordBonus.confusion at 0x000002688BE05080>\n",
+      "Унікальна характеристика: <function SwordBonus.confusion at 0x0000020EB179F060>\n",
       "Накладені Бафи: Дамаг 0 та Витривалість 0\n",
       "Накладені Дебафи: []\n",
       ">>>>>\n",
@@ -790,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Допомого ChatGPT\n",
+    "### Допомога ChatGPT\n",
     "> попросили покращити нам клас бонусу і ось що отримали:\n",
     "\n",
     "Ось аналіз коду класу `SwordBonus` та рекомендації щодо його покращення:\n",
@@ -868,11 +867,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Фінальний вердикт від ChatGPT щодо покращення нашого коду (поки робити не будемо)\n",
+    "\n",
+    "Ось кілька можливих покращень для даної програми:\n",
+    "\n",
+    "1. **Розширення класів мечів і гравців**: Замість того, щоб створювати мечі та гравців окремо, можна створити класи для них, щоб краще організувати код і зробити його більш модульним.\n",
+    "\n",
+    "2. **Перевірка коректності введених даних**: Додайте перевірки на коректність введених гравцем даних. Наприклад, перевірте, чи введено правильні значення для бафів на атаку та міцність.\n",
+    "\n",
+    "3. **Використання функцій та методів класів**: Операції, які повторюються, такі як визначення переможця чи ремонт мечів, можна виокремити в окремі функції або методи класу, щоб зробити код більш читабельним та обслуговуваним.\n",
+    "\n",
+    "4. **Коментування коду**: Додайте коментарі до складних частин коду, щоб пояснити їх функціонал та логіку.\n",
+    "\n",
+    "5. **Організація коду**: Розгляньте можливість розбити код на окремі файли та класи для кращої структуризації та підтримки.\n",
+    "\n",
+    "6. **Оптимізація використання методів**: Перевірте, чи всі методи викликаються оптимально, можливо, деякі можна об'єднати або оптимізувати.\n",
+    "\n",
+    "Це лише кілька можливих покращень. Загалом, завдання полягає в тому, щоб зробити код більш читабельним, модульним та підтримуваним."
+   ]
   }
  ],
  "metadata": {
