apply asserts to Bonus class

--- a/3_lab/nb.ipynb
+++ b/3_lab/nb.ipynb
@@ -150,6 +150,138 @@
     "# Два обєкти навіть одного класу не будуть однаковими, бо кожен обєкт є унікальним\n",
     "#assert o is h, f\"{o} не буде те саме що {h}\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Застосування `assert` до написаного класу Меч\n",
+    "- візьмемо написаний у роботі 2 клас Меча та спробуємо застосувати до нього перевіки `assert`;\n",
+    "- спочатку ми просто перенесемо частини коду, щоб не ломати програми у роботі 2, і модифікуємо їх;\n",
+    "- зберемо в роботі 3, по новій, клас Меча який вже буде повністю протестований;\n",
+    "- спробуємо спочатку протестувати клас бонусів, а потім самого Меча;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "\n",
+    "class SwordBonus:\n",
+    "    \"\"\"Описує функціонал бонусів\"\"\"\n",
+    "    count = 0\n",
+    "\n",
+    "    def __init__(self) -> None:\n",
+    "        SwordBonus.count += 1\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def bonus_poison(item) -> str:\n",
+    "        \"\"\"Накладення отрути, шкода +1\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.damag += 1\n",
+    "            return f\"Застосовано бонус отрути {item.name}\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def bonus_confusion(item) -> str:\n",
+    "        \"\"\"Накладення конфузії, шкода +2\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.damag += 2\n",
+    "            return f\"Застосовано бонус спантеличеність {item.name}\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def bonus_berserk(item) -> str:\n",
+    "        \"\"\"Ефукт Берсерка, шкода +10\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.damag += 10\n",
+    "            return f\"Застосовано бонус Берсерка {item.name}\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def bonus_strength(item) -> str:\n",
+    "        \"\"\"Накладення міцності, міцність +5\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.vitality += 5\n",
+    "            return f\"Застосовано бонус сили до {item.name}\"\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def bonus_invincible(item) -> str:\n",
+    "        \"\"\"Накладення ефект Незламності, міцність +15\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            item.vitality += 15\n",
+    "            return f\"Застосовано бонус сили до {item.name}\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def _nothing(item) -> str:\n",
+    "        \"\"\"Пустий бонус для мечів з низькою якістю\"\"\"\n",
+    "        if SwordBonus.__check_obj(item):\n",
+    "            return f\"Меч {item.name} має занизьку рідкісність!\"\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def list_bonus_methods() -> list:\n",
+    "        \"\"\"Знаходимо методи що надають бонуси, вони будуть починатись з bonus_, та повертаємо їх список\"\"\"\n",
+    "        return [method for method in dir(SwordBonus) if callable(getattr(SwordBonus, method)) and method.startswith(\"bonus_\")]\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def __check_obj(obj: Any) -> bool:\n",
+    "        \"\"\"Реалізували приватний метод який перевіряє чи ми працюємо з правильним обєктом\n",
+    "        - модифікуємо даний метод і використаємо твердження assert;\n",
+    "        - щоб не імпортувати клас Swords, ми просто перевіримо чи обєкт має таке саме представлення як і власне клас Меча; \n",
+    "        - зробили 2 перевірки, на представлення обєкту та на його тип, чи він відноситься до класу Меч;\n",
+    "        - якщо б у нас були інші класи зброї і ми хотіли накладати бафи на будь-яку зброю, \n",
+    "        то нам варто було просто перевірити в даних твердженнях чи існують потрібні нам атрибути, такі як\n",
+    "        нанесення шкоди або витривалість;\n",
+    "        \"\"\"\n",
+    "        assert hasattr(obj, \"damag\"), f\"В обєкта {obj} немає атрибуту нанесення шкоди!\"\n",
+    "        assert hasattr(obj, \"vitality\"), f\"В обєкта {obj} немає атрибуту витривалості!\"\n",
+    "        assert obj.__repr__() == \"Swords()\", f\"Даний обєкт {obj.__class__} не відноситься до класу Swords()\"\n",
+    "        t = [\"<class '__main__.Swords'>\", \"<class '__main__.SwordMock'>\", \"<class '__main__.Axe'>\"]\n",
+    "        assert str(type(obj)) in t, f\"Невідповідність типів переданого обєкту {type(obj)} до потрібного {t}\"\n",
+    "        return True\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        \"\"\"Представлення об'єкта у вигляді рядка, Це буде викликатись коли застосовуємо функцію прінт\"\"\"\n",
+    "        return f\"Клас SwordBonus: реалізує функціонал бонусів, поточний обєкт має хеш {self.__hash__()}\"\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        \"\"\"Канонічне представлення об'єкту\"\"\"\n",
+    "        return f\"SwordBonus()\"\n",
+    "    \n",
+    "    def __len__(self) -> int:\n",
+    "        \"\"\"Застосування методу довжини поверне кількість бонусів які реалізовані в даному класі\"\"\"\n",
+    "        return len(SwordBonus.bonus_list())\n",
+    "\n",
+    "\n",
+    "class Axe:\n",
+    "    def __init__(self) -> None:\n",
+    "        self.name = \"Сокира\"\n",
+    "        self.damag = 0\n",
+    "        self.vitality = 0\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return \"Swords()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Застосовано бонус Берсерка Сокира <<<>>> Застосовано бонус отрути Сокира\n"
+     ]
+    }
+   ],
+   "source": [
+    "sw = Axe() # створений макет меча\n",
+    "sb = SwordBonus() # імплементація бонусів\n",
+    "\n",
+    "print(sb.bonus_berserk(sw), \"<<<>>>\", sb.bonus_poison(sw))"
+   ]
   }
  ],
  "metadata": {
